@@ -1,1 +1,1 @@
-set args -T0 -i 127.0.0.1 -O '127.0.0.1/8080/.'
+set args -T0 -i 127.0.0.1 -O 'F/127.0.0.1/8000/\.php$'
